tests/rosetta/transpiler/Clojure/15-puzzle-game.error
run error: exit status 1
WARNING: empty already refers to: #'clojure.core/empty in namespace: main, being replaced by: #'main/empty
WARNING: val already refers to: #'clojure.core/val in namespace: main, being replaced by: #'main/val
Syntax error (UnsupportedOperationException) compiling recur at (/workspace/mochi/tests/rosetta/transpiler/Clojure/15-puzzle-game.clj:38:832).
Can only recur from tail position

Full report at:
/tmp/clojure-5207802468092525803.edn
